[tool.poetry]
name = "palgoviz"
version = "0.1.0"
description = "Materials for Python and algorithms, with visualization"
authors = [
    "David Vassallo <vassallo.davidm@gmail.com>",
    "Eliah Kagan <degeneracypressure@gmail.com>",
]
maintainers = [
    "Eliah Kagan <degeneracypressure@gmail.com>",
    "David Vassallo <vassallo.davidm@gmail.com>",
]
license = "0BSD"
readme = "doc/dist-readme.md"  # NB: That's for PyPI. Main readme is README.md.
homepage = "https://github.com/EliahKagan/palgoviz"
repository = "https://github.com/EliahKagan/palgoviz"
keywords = ["algorithms", "teaching", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.poetry.dependencies]
python = "~3.11"
attrs = "^22.2.0"
graphviz = "^0.20.1"
more-itertools = "^9.0.0"
sympy = "^1.11.1"

[tool.poetry.group.notebook.dependencies]
ipython = "^8.7.0"
jupyterlab = "^3.5.2"
nbdime = "^3.1.1"

[tool.poetry.group.test.dependencies]
doctestfn = "^1.0.3"
parameterized = "^0.8.1"
pytest = "^7.2.0"
pytest-subtests = "^0.9.0"

[tool.poetry.group.analyzers.dependencies]
flake8-pyproject = "^1.2.2"
isort = "^5.11.4"
mypy = "^0.991"
pyright = "^1.1.286"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-exclude = [".ipynb_checkpoints/"]
extend-ignore = ["E228"]

[tool.isort]
atomic = true
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "--ignore=sandbox"
