[tool.poetry]
name = "palgoviz"
version = "0.1.0"
description = "Materials for Python and algorithms, with visualization"
authors = [
    "David Vassallo <vassallo.davidm@gmail.com>",
    "Eliah Kagan <degeneracypressure@gmail.com>",
]
maintainers = [
    "Eliah Kagan <degeneracypressure@gmail.com>",
    "David Vassallo <vassallo.davidm@gmail.com>",
]
license = "0BSD"
readme = "doc/dist-readme.md"  # NB: That's for PyPI. Main readme is README.md.
homepage = "https://github.com/EliahKagan/palgoviz"
repository = "https://github.com/EliahKagan/palgoviz"
keywords = ["algorithms", "teaching", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.poetry.dependencies]
python = "~3.11"
graphviz = "^0.20.1"
ipykernel = "^6.28.0"
more-itertools = "^10.1.0"
numpy = "^1.26.2"
sympy = "^1.12"

[tool.poetry.group.notebook.dependencies]
ipython = "^8.19.0"
jupyter-collaboration = "^2.0.1"
jupyterlab = "^4.0.10"
nbdime = "^4.0.1"

[tool.poetry.group.test.dependencies]
doctestfn = "^1.0.3"
parameterized = "^0.9.0"
pytest = "^7.4.4"
pytest-subtests = "^0.11.0"

[tool.poetry.group.analyzers.dependencies]
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-exclude = [".ipynb_checkpoints/"]
extend-ignore = ["E228"]

[tool.isort]
atomic = true
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "--ignore=sandbox"
